<resources>
    <string name="app_name">demo-sfera-component</string>
    <string name="notifications_action_cancel_text">Cancel</string>
    <string name="notifications_action_action_text">Some action</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="main_menu_home">Главная</string>
    <string name="main_menu_info">Инфо</string>
    <string name="main_menu_feedback">Обратная связь</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="menu_toolbar_pay">Оплатить</string>
    <string name="menu_toolbar_fill">Пополнить</string>
    <string name="menu_toolbar_more">Подробнее</string>
    <string name="menu_toolbar_settings">Настройки</string>
    <string name="home_section_buttons">Buttons</string>
    <string name="home_section_text_fields">Text fields</string>
    <string name="home_section_cells_base">Base Cells</string>
    <string name="home_section_cells_text">Text Cells</string>
    <string name="home_section_components">Components</string>
    <string name="home_section_tabs">Tabs</string>
    <string name="home_section_bottom_sheet_subtitle">Информационная панель</string>
    <string name="home_section_bottom_sheet_title">Bottom-sheets</string>
    <string name="home_section_toolbar_subtitle">Меню</string>
    <string name="home_section_toolbar_title">Toolbar</string>
    <string name="home_section_stepper_subtitle">Набор шагов</string>
    <string name="home_section_stepper_title">Stepper</string>
    <string name="home_section_pin_keyboard_subtitle">Клавиатура для ввода пинкода</string>
    <string name="home_section_pin_keyboard_title">Pin Keyboard</string>
    <string name="home_section_chat_title">Chat</string>
    <string name="home_section_chat_subtitle">Элементы чата</string>
    <string name="cell_title">Title</string>
    <string name="cell_subtitle">Subtitle</string>
    <string name="cell_button">Button</string>
    <string name="cell_percent">Percent</string>
    <string name="cell_date">Date</string>
    <string name="cell_subtitle_second">Subtitle 2</string>
    <string name="cell_summ">Summ</string>
    <string name="cell_more">More</string>
    <string name="cell_message">Message hello</string>
    <string name="cell_action">Действие</string>
    <string name="cell_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string-array name="courses">
        <item>algebra</item>
        <item>math</item>
        <item>history</item>
    </string-array>
    <string name="test_components_moscow">Moscow</string>
    <string name="bottom_sheet_title">Bottom-sheets</string>
    <string name="bottom_sheet_hint">Всплывающие окна отображаются в нижней части экрана, содержат
        дополнения к основному экрану и остаются видимыми, пока пользователи взаимодействуют с основным контентом.
        \n\nТакже являются альтернативой встроенным меню или простым диалоговым окнам на мобильных устройствах и
        предоставляют место для дополнительных элементов, более длинных описаний и значков.</string>
    <string name="bottom_sheet_action">Для вызова Bottom-sheet, нажмите кнопку</string>
    <string name="bottom_sheet_button">Показать Bottom-sheet</string>
    <string name="bottom_sheet_dialog_title">Выберите несколько карт</string>
    <string name="bottom_sheet_dialog_item_subtitle">Subtitle</string>
    <string name="bottom_sheet_dialog_item_title">Title</string>
    <string name="bottom_sheet_dialog_button_additional">Выбрать все карты</string>
    <string name="bottom_sheet_dialog_action">Готово</string>
    <string name="tabs_title">Tabs</string>
    <string name="tabs_underline_title">Underline Tabs</string>
    <string name="tabs_slider_title">Slider</string>
    <string name="tabs_center_title">Center</string>
    <string name="tabs_standard_title">Standard Tabs</string>
    <string name="tabs_logo_title">Logo Tabs</string>
    <string name="tabs_icon_title">Icon Tabs</string>
    <string name="tabs_informer_title">Informer Tabs</string>
    <string name="tabs_outline_title">Outline Slider Tabs</string>
    <string name="tabs_underline_slider_title">Underline Slider Tabs</string>
    <string name="tabs_underline_center_title">Underline Center Tabs</string>
    <string name="tabs_informer_example_title">то получу в страховом случае</string>
    <string name="tabs_informer_example_summ">до 1 500 000 ₽</string>
    <string name="tabs_informer_example_subtitle">Выгодный вариант для двухкомнатной квартиры или дачного дома</string>
    <string name="tabs_slider_control">Slider controls</string>
    <string name="tabs_notifications">Notifications</string>
    <string name="tabs_example_one">One</string>
    <string name="tabs_example_two">Two</string>
    <string name="tabs_example_three">Three</string>
    <string name="tabs_example_four">Four</string>
    <string name="tabs_example_five">Five</string>
    <string name="tabs_example_six">Six</string>
    <string name="tabs_example_seven">Seven</string>
    <string name="tabs_example_eight">Eight</string>
    <string name="tabs_example_nine">Nine</string>
    <string name="tabs_default">Default</string>
    <string name="tabs_disabled">Disabled</string>
    <string name="tabs_two_controls">Two controls</string>
    <string name="tabs_three_controls">Three controls</string>
    <string name="tabs_four_controls">Four controls</string>
    <string name="tabs_five_controls">Five controls</string>
    <string name="tabs_one">One</string>
    <string name="tabs_two">Two</string>
    <string name="tabs_three">Three</string>
    <string name="tabs_four">Four</string>
    <string name="tabs_five">Five</string>
    <string name="tabs_example_informer_tab_subtitle">в месяц</string>
    <string name="tabs_example_informer_tab_title">2 900 ₽</string>
    <string name="tabs_loading">Loading</string>
    <string name="stepper_completed">Completed</string>
    <string name="stepper_current">Current</string>
    <string name="stepper_next">Next</string>
    <string name="stepper_error">Error</string>
    <string name="stepper_disabled">Disabled</string>
    <string name="stepper_example_link">Link</string>
    <string name="stepper_example_subtitle">Subtitle</string>
    <string name="stepper_example_title">Title</string>
    <string name="stepper_one_step">One step</string>
    <string name="switcher_title">Switcher</string>
    <string name="switcher_on">On</string>
    <string name="switcher_off">Off</string>
    <string name="switcher_subtitle">Переключатель</string>
    <string name="alerts_onboarding_title">Alerts &amp; Onboarding </string>
    <string name="alerts_title_home">Alerts</string>
    <string name="alerts_title">Alert</string>
    <string name="onboarding_title">Onboarding</string>
    <string name="zeroscreen_title">Zeroscreen</string>
    <string name="error_view_title">Error View</string>
    <string name="pop_up_title">Pop-up</string>
    <string name="pop_up_hint">Всплывающие окна поверх контента, часто содержат короткое информирующее сообщение, иллюстрацию и кнопки основгого или альтернативного действия.</string>
    <string name="pop_up_guide">Для вызова Pop-up, нажмите кнопку</string>
    <string name="pop_up_action_sshow">Показать Alert</string>
    <string name="pop_up_example_title">Header</string>
    <string name="pop_up_example_button">Хорошо</string>
    <string name="pop_up_example_button_alternative">Отмена</string>
    <string name="text_fields_standard_vs_icon_title">Standard vs Icon</string>
    <string name="text_fields_default">Default</string>
    <string name="text_fields_read_only">Read Only</string>
    <string name="text_fields_error">Error</string>
    <string name="text_fields_success">Success</string>
    <string name="text_fields_disabled">Disabled</string>
    <string name="text_fields_text">Text</string>
    <string name="text_fields_sms_text">67653</string>
    <string name="text_fields_card_number_text">1111 2222 3333 4444</string>
    <string name="text_fields_number_optional_label">Optional label</string>
    <string name="text_fields_feedback_title">Feedback</string>
    <string name="text_fields_optional_label">label</string>
    <string name="text_fields_digits_count">Количество знаков</string>
    <string name="text_fields_slider_optional_label">Optional label</string>
    <string name="text_fields_example_slider_left">100</string>
    <string name="text_fields_example_slider_right">10 000</string>
    <string name="text_fields_example_slider_text">4 500</string>
    <string name="text_fields_example_slider_additional">Additional text</string>
    <string name="text_fields_number_title">Number</string>
    <string name="text_fields_double_title">Double</string>
    <string name="text_fields_example_50_50">50/50</string>
    <string name="text_fields_example_70_30">70/30</string>
    <string name="text_fields_standard_title">Standard</string>
    <string name="text_fields_sms_title">SMS Code</string>
    <string name="text_fields_card_number_title">Card Number</string>
    <string name="text_fields_title">Text fields</string>
    <string name="text_fields_slider_title">Slider</string>
    <string name="text_fields_pincode_title">Pincode</string>
    <string name="text_fields_card_title">Card Number</string>
    <string name="text_fields_basic">Basic</string>
    <string name="text_fields_masked">Masked</string>
    <string name="text_fields_multiline">Multiline</string>
    <string name="text_fields_bank_card_placeholder">1111 2222 3333 4444</string>
    <string name="cells_title">Cells</string>
    <string name="cells_base_title">Base Cells</string>
    <string name="cells_subtitle">Ячейки и списки</string>
    <string name="cells_base_cells_title">Base Cells</string>
    <string name="cells_leading_title">Leading elements</string>
    <string name="cells_center_title">Center elements</string>
    <string name="cells_trailing_title">Trailing elements</string>
    <string name="cells_label_title">Label</string>
    <string name="cells_card_place">Card Place</string>
    <string name="cells_card_label">Lable Place</string>
    <string name="cells_icon">Icon Name</string>
    <string name="cells_icon_vs_background">Icon Place vs Background</string>
    <string name="cells_icon_place">Icon Place</string>
    <string name="cells_secondary_title">Secondary</string>
    <string name="title_cells_title">Title Cells</string>
    <string name="cells_primary_title">Primary</string>
    <string name="actionbar_title">Actionbar</string>
    <string name="actionbar_more_clicked">More clicked</string>
    <string name="actionbar_email">Text</string>
    <string name="actionbar_star">Text</string>
    <string name="actionbar_edit">Text</string>
    <string name="actionbar_email_clicked">Email clicked</string>
    <string name="actionbar_star_clicked">Star clicked</string>
    <string name="actionbar_edit_clicked">Edit clicked</string>
    <string name="actionbar_swipe">Swipe</string>
    <string name="actionbar_money_amount">50 000.00 ₽</string>
    <string name="actionbar_default_title">Default</string>
    <string name="actionbar_secondary_title">Secondary</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_primary">Primary</string>
    <string name="informers_example_info">At breakpoint boundaries, mini units divide the screen into a fixed master grid, and multiples of mini units map to fluid grid column widths and row heights.</string>
    <string name="informers_example_link">Link text</string>
    <string name="informers_success">Success</string>
    <string name="informers_attention">Attention</string>
    <string name="informers_error">Error</string>
</resources>